--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 
         var img = document.createElement("img");
-        img.src = './/chander.jpg';
+        img.src = './chander.jpg';
         img.setAttribute("style", "width:200px;height:200px;float:right;margin-top:-200px");
         document.body.appendChild(img);
 
@@ -82,7 +82,7 @@
 
 
         var img = document.createElement("img");
-        img.src = './/sign.jpg';
+        img.src = './sign.jpg';
         img.setAttribute("style", "width:300px;height:50px;margin-left:100px;");
         document.body.appendChild(img);
     </script>
